<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"  >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1_01"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_app_icon_ehang"
            android:scaleType="centerInside"
            android:src="@drawable/app_icon_ehang" />

        <TextView
            android:id="@+id/toolkit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/img_logo"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/title_ehang"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </RelativeLayout>
    
 	<RelativeLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
 	    android:layout_weight="2"
 	    android:background="#000000" >

 	    <LinearLayout
 	        android:id="@+id/linearLayout1"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1" >

 	        <Button
 	            android:id="@+id/imagebutton1"
 	            android:layout_width="wrap_content"
 	            android:layout_height="fill_parent"
 	            android:layout_marginRight="1dip"
 	            android:layout_marginTop="0dp"
 	            android:layout_weight="1"
 	            android:background="@drawable/button_bg"
 	            android:drawablePadding="5dp"
 	            android:drawableTop="@drawable/icon_off_fight"
 	            android:paddingBottom="2dip"
 	            android:text="@string/text_tourch"
 	            android:textColor="#000000"
 	            android:textSize="12sp" />

 	        <Button
 	            android:id="@+id/imagebutton2"
 	            android:layout_width="wrap_content"
 	            android:layout_height="fill_parent"
 	            android:layout_marginLeft="1dip"
 	            android:layout_marginTop="0dp"
 	            android:layout_weight="1"
 	            android:background="@drawable/button_bg"
 	            android:drawablePadding="5dp"
 	            android:drawableTop="@drawable/icon_sos"
 	            android:paddingBottom="2dip"
 	            android:text="@string/text_sos"
 	            android:textColor="#000000"
 	            android:textSize="12sp" />
 	    </LinearLayout>

 	    <LinearLayout
 	        android:id="@+id/linearLayout2"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentLeft="true"
 	        android:layout_below="@+id/linearLayout1"
 	        android:layout_weight="1" >

 	        <Button
 	            android:id="@+id/imagebutton3"
 	            android:layout_width="wrap_content"
 	            android:layout_height="fill_parent"
 	            android:layout_marginRight="1dip"
 	            android:layout_marginTop="2dp"
 	            android:layout_weight="1"
 	            android:background="@drawable/button_bg"
 	            android:drawablePadding="5dp"
 	            android:drawableTop="@drawable/icon_altimeter"
 	            android:paddingBottom="2dip"
 	            android:paddingTop="3dip"
 	            android:text="@string/text_altimeter"
 	            android:textColor="#000000"
 	            android:textSize="12sp" />

 	        <Button
 	            android:id="@+id/imagebutton4"
 	            android:layout_width="wrap_content"
 	            android:layout_height="fill_parent"
 	            android:layout_marginLeft="1dip"
 	            android:layout_marginTop="2dp"
 	            android:layout_weight="1"
 	            android:background="@drawable/button_bg"
 	            android:drawablePadding="5dp"
 	            android:drawableTop="@drawable/icon_controlrecorder"
 	            android:paddingBottom="2dip"
 	            android:paddingTop="3dip"
 	            android:text="@string/text_controlrecorder"
 	            android:textColor="#000000"
 	            android:textSize="12sp" />
 	    </LinearLayout>

 	    <LinearLayout
 	        android:id="@+id/linearLayout3"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentLeft="true"
 	        android:layout_below="@+id/linearLayout2"
 	        android:layout_weight="1" >

 	        <Button
 	            android:id="@+id/imagebutton5"
 	            android:layout_width="wrap_content"
 	            android:layout_height="fill_parent"
 	            android:layout_marginRight="1dip"
 	            android:layout_marginTop="2dp"
 	            android:layout_weight="1"
 	            android:background="@drawable/button_bg"
 	            android:drawablePadding="5dp"
 	            android:drawableTop="@drawable/icon_magnifiter"
 	            android:paddingBottom="2dip"
 	            android:paddingTop="3dip"
 	            android:text="@string/text_magnifiter"
 	            android:textColor="#000000"
 	            android:textSize="12sp" />

 	        <Button
 	            android:id="@+id/imagebutton6"
 	            android:layout_width="wrap_content"
 	            android:layout_height="fill_parent"
 	            android:layout_marginLeft="1dip"
 	            android:layout_marginTop="2dp"
 	            android:layout_weight="1"
 	            android:background="@drawable/button_bg"
 	            android:drawablePadding="5dp"
 	            android:drawableTop="@drawable/icon_mypedometer"
 	            android:paddingBottom="2dip"
 	            android:paddingTop="3dip"
 	            android:text="@string/text_mypedometer"
 	            android:textColor="#000000"
 	            android:textSize="12sp" />
 	    </LinearLayout>

 	    <LinearLayout
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentLeft="true"
 	        android:layout_below="@+id/linearLayout3"
 	        android:layout_weight="1" >
 	        
 	        <Button
 	            android:id="@+id/imagebutton7"
 	            android:layout_width="wrap_content"
 	            android:layout_height="fill_parent"
 	            android:layout_marginRight="1dip"
 	            android:layout_marginTop="2dp"
 	            android:layout_weight="1"
 	            android:background="@drawable/button_bg"
 	            android:drawablePadding="5dp"
 	            android:drawableTop="@drawable/icon_compass"
 	            android:paddingBottom="2dip"
 	            android:paddingTop="3dip"
 	            android:text="@string/text_compass"
 	            android:textColor="#000000"
 	            android:textSize="12sp" />

 	        <Button
 	            android:id="@+id/imagebutton8"
 	            android:layout_width="wrap_content"
 	            android:layout_height="fill_parent"
 	            android:layout_marginLeft="1dip"
 	            android:layout_marginTop="2dp"
 	            android:layout_weight="1"
 	            android:background="@drawable/button_bg"
 	            android:drawablePadding="5dp"
 	            android:drawableTop="@drawable/icon_about"
 	            android:paddingBottom="2dip"
 	            android:paddingTop="3dip"
 	            android:text="@string/text_about"
 	            android:textColor="#000000"
 	            android:textSize="12sp" />
 	    </LinearLayout>
 	    
 	</RelativeLayout>
 
</LinearLayout>